FREEDOM-211 Correct citation copy alignment issues

--- a/custom/themes/leaf_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/leaf_lib_unb_ca/src/scss/style.scss
@@ -715,7 +715,9 @@ main {
                 }
                 // Button.
                 #cite {
+                  position: relative;
                   margin: 1rem 0;
+                  top: 1rem 0;
                   float: right;
                 }
               }
